src/objects/EC_Question__c.object
<CustomObject>
    <fields>
        <fullName>Picklist_Industry__c</fullName>
        <label>Picklist_Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Not for Profit</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>HealthCare</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Bio Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_LM2__c</fullName>
        <label>Picklist_LM2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anonymous</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_LM__c</fullName>
        <label>Picklist_LM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LDAP</fullName>
                    <label>LDAP Authentication</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <label>Standard Authentication</label>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                    <label>Integrated Authentication</label>
                </value>
                <value>
                    <fullName>Database Authentication</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>Windows Authentication</fullName>
                </value>
                <value>
                    <fullName>Trusted Authentication Request</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Language__c</fullName>
        <label>Picklist_Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Dasnih</fullName>
                </value>
                <value>
                    <fullName>Dutch (Netherlands)</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Leverage__c</fullName>
        <label>Picklist_Leverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WH</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>HL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_LoadBalancer__c</fullName>
        <label>Picklist_LoadBalancer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apache HTTP Server</fullName>
                </value>
                <value>
                    <fullName>Amazon ELB</fullName>
                </value>
                <value>
                    <fullName>F5 BIG-IP</fullName>
                </value>
                <value>
                    <fullName>Citrix NetScaler</fullName>
                </value>
                <value>
                    <fullName>Cisco Load Balancer</fullName>
                </value>
                <value>
                    <fullName>Barracuda Load Balancer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Location__c</fullName>
        <label>Picklist_Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_MDX__c</fullName>
        <label>Picklist_MDX</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>As Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_MSA__c</fullName>
        <label>Picklist_MSA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anonymous</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Maturity__c</fullName>
        <label>Picklist_Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IE 1</fullName>
                </value>
                <value>
                    <fullName>IE 2</fullName>
                </value>
                <value>
                    <fullName>IE 3</fullName>
                </value>
                <value>
                    <fullName>IE 4</fullName>
                </value>
                <value>
                    <fullName>IE 5</fullName>
                </value>
                <value>
                    <fullName>IE 6</fullName>
                </value>
                <value>
                    <fullName>IE 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_NS__c</fullName>
        <label>Picklist_NS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airwatch</fullName>
                </value>
                <value>
                    <fullName>MobileIron</fullName>
                </value>
                <value>
                    <fullName>AppConfig</fullName>
                </value>
                <value>
                    <fullName>Good Dynamics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_OM__c</fullName>
        <label>Picklist_OM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>As Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_OS2__c</fullName>
        <label>Picklist_OS2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 7</fullName>
                </value>
                <value>
                    <fullName>Windows 8.1</fullName>
                </value>
                <value>
                    <fullName>Windows 10</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_OS3__c</fullName>
        <label>Picklist_OS3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 7</fullName>
                </value>
                <value>
                    <fullName>Windows 8.1</fullName>
                </value>
                <value>
                    <fullName>Windows 10</fullName>
                </value>
                <value>
                    <fullName>Mac OS X 10.9.x</fullName>
                </value>
                <value>
                    <fullName>Mac OS X 10.10.x</fullName>
                </value>
                <value>
                    <fullName>Mac OS X 10.11.x</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_OS4__c</fullName>
        <label>Picklist_OS4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2008 R2</fullName>
                </value>
                <value>
                    <fullName>Windows 2012</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 R2</fullName>
                </value>
                <value>
                    <fullName>Windows Server 2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Processor__c</fullName>
        <label>Picklist_Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intel Celeron</fullName>
                </value>
                <value>
                    <fullName>Intel Xeon</fullName>
                </value>
                <value>
                    <fullName>Intel Pentium</fullName>
                </value>
                <value>
                    <fullName>Intel Core i3</fullName>
                </value>
                <value>
                    <fullName>Intel Core i5</fullName>
                </value>
                <value>
                    <fullName>Intel Core i7</fullName>
                </value>
                <value>
                    <fullName>AMD Athlon II</fullName>
                </value>
                <value>
                    <fullName>AMD Athlon 64</fullName>
                </value>
                <value>
                    <fullName>AMD Athlon 64 FX</fullName>
                </value>
                <value>
                    <fullName>AMD Athlon 64 X2</fullName>
                </value>
                <value>
                    <fullName>AMD Athlon X2</fullName>
                </value>
                <value>
                    <fullName>AMD Opteron</fullName>
                </value>
                <value>
                    <fullName>AMD Phenom</fullName>
                </value>
                <value>
                    <fullName>AMD Phenom II</fullName>
                </value>
                <value>
                    <fullName>AMD Sempron</fullName>
                </value>
                <value>
                    <fullName>AMD Turion II</fullName>
                </value>
                <value>
                    <fullName>AMD Turion 64</fullName>
                </value>
                <value>
                    <fullName>AMD Turion 64 X2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Reevaluated__c</fullName>
        <label>Picklist_Reevaluated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Restart__c</fullName>
        <label>Picklist_Restart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>As Necessary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Reviewed__c</fullName>
        <label>Picklist_Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_RunAs__c</fullName>
        <label>Picklist_RunAs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_SPAC__c</fullName>
        <label>Picklist_SPAC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Schema__c</fullName>
        <description>List of schema types</description>
        <inlineHelpText>List of schema types</inlineHelpText>
        <label>Picklist_Schema</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highly normalized schema</fullName>
                </value>
                <value>
                    <fullName>Moderately normalized schema</fullName>
                </value>
                <value>
                    <fullName>Highly denormalized schema</fullName>
                </value>
                <value>
                    <fullName>Star schema</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_SelfService__c</fullName>
        <label>Picklist_SelfService</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dedicated Self Service</fullName>
                </value>
                <value>
                    <fullName>Shared with Operational Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Stats__c</fullName>
        <label>Picklist_Stats</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete Session Login (Recommended)</fullName>
                    <label>Complete Session Login</label>
                </value>
                <value>
                    <fullName>Single Instance Session Login</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Strategic__c</fullName>
        <label>Picklist_Strategic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Tactical</fullName>
                </value>
                <value>
                    <fullName>true</fullName>
                    <isActive>false</isActive>
                    <label>true</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_TAP__c</fullName>
        <label>Picklist_TAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Siteminder</fullName>
                </value>
                <value>
                    <fullName>Tivoli/IBM Security Access Manager</fullName>
                </value>
                <value>
                    <fullName>PingFederate</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_VBV__c</fullName>
        <label>Picklist_VBV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10.4</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>10.6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Version__c</fullName>
        <label>Picklist_Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9.3</fullName>
                </value>
                <value>
                    <fullName>9.3.1</fullName>
                </value>
                <value>
                    <fullName>9.4</fullName>
                </value>
                <value>
                    <fullName>9.4.1</fullName>
                </value>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>9.5.1</fullName>
                </value>
                <value>
                    <fullName>10.0</fullName>
                </value>
                <value>
                    <fullName>10.1</fullName>
                </value>
                <value>
                    <fullName>10.2</fullName>
                </value>
                <value>
                    <fullName>10.3</fullName>
                </value>
                <value>
                    <fullName>10.4</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>10.6</fullName>
                </value>
                <value>
                    <fullName>10.7</fullName>
                </value>
                <value>
                    <fullName>10.8</fullName>
                </value>
                <value>
                    <fullName>10.9</fullName>
                </value>
                <value>
                    <fullName>10.10</fullName>
                </value>
                <value>
                    <fullName>10.11</fullName>
                </value>
                <value>
                    <fullName>11.0</fullName>
                </value>
                <value>
                    <fullName>11.1</fullName>
                </value>
                <value>
                    <fullName>11.2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_WebComponent__c</fullName>
        <label>Picklist_WebComponent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 R2</fullName>
                </value>
                <value>
                    <fullName>Windows 2012</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 R2</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 7.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.0.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.1.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.2.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.3.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.4.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.5.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.6.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.7.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 5.5</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 5.6</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 5.7</fullName>
                </value>
                <value>
                    <fullName>SUSE Linux Enterprise Server 12</fullName>
                </value>
                <value>
                    <fullName>SUSE Linux Enterprise Server 11</fullName>
                </value>
                <value>
                    <fullName>IBM AIX 7.1</fullName>
                </value>
                <value>
                    <fullName>IBM AIX 6.2</fullName>
                </value>
                <value>
                    <fullName>IBM AIX 6.1</fullName>
                </value>
                <value>
                    <fullName>Oracle Solaris 11.x</fullName>
                </value>
                <value>
                    <fullName>Oracle Solaris 10.x</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_WindowsOS__c</fullName>
        <label>Picklist_WindowsOS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 10</fullName>
                </value>
                <value>
                    <fullName>Windows 8.1</fullName>
                </value>
                <value>
                    <fullName>Windows 8</fullName>
                </value>
                <value>
                    <fullName>Windows 7</fullName>
                </value>
                <value>
                    <fullName>Windows Vista</fullName>
                </value>
                <value>
                    <fullName>Windows XP Professional x64</fullName>
                </value>
                <value>
                    <fullName>Windows XP</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 R2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_YNNA__c</fullName>
        <label>Picklist_YNNA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_YNP__c</fullName>
        <label>Picklist_YNP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_YNUD__c</fullName>
        <label>Picklist_YNUD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Uncertain</fullName>
                </value>
                <value>
                    <fullName>Did Not Ask</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Order__c</fullName>
        <label>Program Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intelligence Architecture</fullName>
                </value>
                <value>
                    <fullName>Intelligence Program</fullName>
                </value>
                <value>
                    <fullName>Intelligence Center</fullName>
                </value>
                <value>
                    <fullName>Intelligence Platform</fullName>
                </value>
                <value>
                    <fullName>Intelligence Solutions</fullName>
                </value>
                <value>
                    <fullName>Enterprise Assets</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <displayFormat>Q-{000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Question_Title__c</fullName>
        <label>Question Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
</CustomObject>